syntax = "proto3";

message HistoryWeatherDataResponse {
    int32 blockId = 16;
    string location = 17;
    repeated HistoryWeatherDataResponseItem data = 18;
}

message HistoryWeatherDataResponseItem {
    string time = 19;
    double averagePressure = 20;
    double averageSeaLevelPressure = 21;
    double precipitation = 22;
    double oneHourMaxPrecipitation = 23;
    double tenMinuteMaxPrecipitation = 24;
    double averageTemperature = 25;
    double highestTemperature = 26;
    double lowestTemperature = 27;
    double averageHumidity = 28;
    double lowestHumidity = 29;
    double averageWindSpeed = 30;
    double maximumWindSpeed = 31;
    string maximumWindDirection = 32;
    double maximumGustSpeed = 33;
    string maximumGustDirection = 34;
    double daylightHours = 35;
    double showFall = 36;
    double showDepth = 37;
    string dayWeatherDescription = 38;
    string nightWeatherDescription = 39;
    int32 date = 40;
}